--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@ code {
     monospace;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+}
+
 .btn-container {
   display: flex;
   align-items: baseline;
