--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,27 @@
 .radio-choice {
   padding-left: 0.5rem;
 }
+
+.overlay {
+  position: fixed;
+  display: block;
+  overflow: auto;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.content {
+  margin: 30% auto;
+  background-color: white;
+  border-radius: 0.25rem;
+  width: 70%;
+  padding: 2rem;
+  position: relative;
+  text-align: center;
+}
