--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 .body {
   font-family: 'Montserrat', sans-serif;
+  background-color: rgb(50, 50, 50);
+  color: white;
 }
 
 .container {
@@ -19,6 +28,13 @@
   gap: 2rem;
 }
 
+.card {
+  color: white;
+  background-color: rgb(50, 50, 50);
+  border-radius: 10rem;
+  border: none;
+  }
+
 .card-container {
   max-width: 500px;
   min-height: 250px;
@@ -26,15 +42,16 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+
+  background-color: rgb(88, 85, 85);
+  border: none;
+  
 }
 
 .multi-choice {
-  display: flex;
-  align-items: baseline;
-}
-
-.radio-choice {
-  padding-left: 0.5rem;
+  border-radius: 15px;
+  width: 100%;
+  border: none;
 }
 
 .overlay {
