--- a/src/index.css
+++ b/src/index.css
@@ -28,13 +28,6 @@
   gap: 2rem;
 }
 
-.card {
-  color: white;
-  background-color: rgb(50, 50, 50);
-  border-radius: 10rem;
-  border: none;
-  }
-
 .card-container {
   max-width: 500px;
   min-height: 250px;
@@ -44,14 +37,22 @@
   align-items: center;
 
   background-color: rgb(88, 85, 85);
-  border: none;
-  
+  border-radius: 1rem;
+  padding: 1rem;
+}
+
+.multi-choice-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .multi-choice {
-  border-radius: 15px;
+  border-radius: 2rem;
   width: 100%;
+  min-height: 2.75rem;
   border: none;
+  margin: 0.25rem;
 }
 
 .overlay {
