--- a/src/index.css
+++ b/src/index.css
@@ -29,12 +29,13 @@
 }
 
 .card-container {
-  max-width: 500px;
+  width: 500px;
   min-height: 250px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  margin: 1rem;
 
   background-color: rgb(88, 85, 85);
   border-radius: 1rem;
