--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
   color: white;
 }
 
+.title {
+  font-size: 2rem;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -29,13 +33,9 @@
 }
 
 .card-container {
-  width: 500px;
-  min-height: 250px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  margin: 1rem;
+  margin: 1rem ;
+  text-align: center;
 
   background-color: rgb(88, 85, 85);
   border-radius: 1rem;
@@ -46,11 +46,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} 
 
 .multi-choice {
+  background-color: rgb(88, 85, 85);
+  color: white;
   border-radius: 2rem;
-  width: 100%;
+  width: 85vw;
   min-height: 2.75rem;
   border: none;
   margin: 0.25rem;
