radio back to btns - style buttons

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,15 @@
   gap: 2rem;
 }
 
+.next-btn {
+  background-color: #037F8C;
+  color: white;
+  width: 5rem;
+  height: 2rem;
+  border-radius: 1rem;
+  border: none;
+}
+
 .card-container {
   display: flex;
   margin: 1rem ;
