checked color as ternary instead of css

--- a/src/index.css
+++ b/src/index.css
@@ -85,9 +85,9 @@
   text-align: left;
 }
 
-.multi-choice:focus {
+/* .multi-choice:focus {
   background-color: #F25C05;
-}
+} */
 
 .overlay {
   position: fixed;
