--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,15 @@
   align-items: center;
 }
 
+.home-container {
+  background-image: url(./images/background.png);
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .logo-container {
   display: flex;
   flex-direction: column;
