--- a/src/index.css
+++ b/src/index.css
@@ -91,8 +91,8 @@
   text-align: center;
   background-color: rgb(88, 85, 85);
   border-radius: 1rem;
-  max-width: 80%;
-  min-height: 30vh;
+  width: 70vw;
+  height: 30vh;
 }
 
 .question {
@@ -105,13 +105,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 70vw;
 } 
 
 .multi-choice {
   background-color: rgb(88, 85, 85);
   color: white;
   border-radius: 2rem;
-  width: 20rem;
+  width: 70vw;
   min-height: 3rem;
   border: none;
   margin: 0.5rem;
