--- a/src/index.css
+++ b/src/index.css
@@ -77,8 +77,8 @@
 }
 
 .next-btn {
-  background-color: #00C6CB;
-  color: white;
+  background-color: #F9F871;
+  color: black;
   width: 5rem;
   height: 2rem;
   border-radius: 1rem;
@@ -122,7 +122,7 @@
 }
 
 .correct {
-  border: 1px solid yellow;
+  border: 2px solid #F9F871;
 }
 
 .overlay {
