--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 ::before {
   margin: 0;
   padding: 0;
+  border: 0;
   box-sizing: border-box;
 }
 
@@ -16,14 +17,18 @@
 }
 
 .title {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 700;
+}
+
+.level {
+  font-size: 1.5rem;
 }
 
 .container {
   display: flex;
-  min-height: 100vh;
-  max-width: 100%;
+  height: 100vh;
+  min-width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -72,7 +77,7 @@
 }
 
 .quiz-container {
-  margin: 2rem;
+  margin: 1rem;
   text-align: center;
 }
 
@@ -91,13 +96,13 @@
   text-align: center;
   background-color: rgb(88, 85, 85);
   border-radius: 1rem;
-  width: 70vw;
-  height: 30vh;
+  width: 80vw;
+  height: 25vh;
 }
 
 .question {
-  margin: auto;
-  font-size: 1.5rem;
+  margin: auto 0.5rem;
+  font-size: 6vw;
 }
 
 .multi-choice-container {
@@ -105,20 +110,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 70vw;
 } 
 
 .multi-choice {
   background-color: rgb(88, 85, 85);
   color: white;
   border-radius: 2rem;
-  width: 70vw;
-  min-height: 3rem;
+  width: 80vw;
+  min-height: 2rem;
   border: none;
   margin: 0.5rem;
   padding: 0.5rem 2rem;
   text-align: left;
-  font-size: 1.5rem;
+  font-size: 4vw;
 }
 
 .correct {
@@ -194,4 +198,49 @@
   border: none;
   font-size: 1.25rem;
   width: 10rem;
+}
+
+@media screen and (min-width: 530px) {
+  .title {
+    font-size: 3rem;
+  }
+
+  .level {
+    font-size: 2rem;
+  }
+
+  .quiz-container {
+    margin: 2rem;
+  }
+
+  .question {
+    font-size: 5vw;
+  }
+
+  .multi-choice {
+    margin: 1rem;
+  }
+}
+
+@media screen and (min-width: 630px) {
+  .question {
+    font-size: 4vw;
+  }
+
+  .multi-choice {
+    padding: 1rem;
+    font-size: 4vw;
+  }
+}
+
+@media screen and (min-width: 950px) {
+  .question {
+    font-size: 2.5vw;
+  }
+
+  .multi-choice {
+    font-size: 2vw;
+    text-align: center;
+    margin: 1.5rem;
+  }
 }
