--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,7 @@
 .card-container {
   display: flex;
   margin: 1rem;
+  padding: 1rem;
   text-align: center;
   background-color: rgb(88, 85, 85);
   border-radius: 1rem;
@@ -101,7 +102,7 @@
 }
 
 .question {
-  margin: auto 0.5rem;
+  margin: auto;
   font-size: 6vw;
 }
 
@@ -126,7 +127,7 @@
 }
 
 .correct {
-  border: 2px solid #ff193c;
+  border: 3px solid #ff193c;
 }
 
 .overlay {
