lighter play btn color

--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,7 @@
 }
 
 .play-btn {
-  background-color: #FF1A3D;
+  background-color: #139fca;
   font-size: 2.5rem;
   color: white;
   border-radius: 2rem;
